--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
             <p>The graph is generated using the <a href="https://visjs.org/">Vis.js library</a> in confunction with the Force Atlas 2 Based physics solver and is programmed with vanilla JavaScript. The site was built using Bootstrap.</p>
-            <p>Source code <a href="https://github.com/Zmalski/egographer">here.</a></p>
+            <p><a href="https://github.com/Zmalski/egographer">Source code</a></p>
         </div>
     </section>
     <section class="py-5" id="limits">
