--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1>What is this?</h1>
             <div class="row">
                 <div class="col-md-8">
-                    <p class="descriptors">This tool creates a network graph, specifically referred to as an ego graph, based on the word you enter in the input box above. The ego graph is visually depicted as a collection of circles known as nodes. In this context, these nodes represent fundamental one-word concepts or terms. You'll observe lines connecting these nodes on the graph; these lines signify relationships between the terms and are called edges. The thickness of an edge reflects the strength of the relationship between two terms. Additionally, a node's size and color are determined by the number of connections it has with other nodes.</p>
+                    <p class="descriptors">This tool creates a network graph, specifically referred to as an <b>ego graph</b>, based on the word you enter in the input box above. The ego graph is visually depicted as a collection of circles known as <b>nodes</b>. In this context, these nodes represent fundamental one-word concepts or terms. You'll observe lines connecting these nodes on the graph; these lines signify relationships between the terms and are called <b>edges</b>. The thickness of an edge reflects the strength of the relationship between two terms. A node's size and color are determined by the number of connections it has with other nodes.</p>
                 </div>
                 <div class="col align-self-center">
                     <img class="img-fluid" src="img/diagram.png" alt="A nice diagram." style="max-height:20em">
