--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section class="py-5" id="how">
         <div class="container">
             <h1>How does it work?</h1>
-            <p class="descriptors">Enter a term, press "Build" and see for yourself! Tt may take up to a minute or two to draw the graph, please be patient. </p>
+            <p class="descriptors">Enter a term, press "Build" and see for yourself! It may take up to a minute or two to draw the graph, please be patient. </p>
             <p class="descriptors">When you hit build, your term is fed into an external URL which returns a set of XML results containing the Google autocomplete suggestions for that term followed by "vs". The top 5 "cleaned" (single word, no double
                 terms, etc.) results are processed to form a series of nodes. For example, with "apple" we might get with the following result:</p>
             <table class="table col-6 col-md-4 table-striped table-bordered table-hover table-sm">
